[project]
name = "banco-vivienda-reflex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "reflex>=0.8.28.post1",
    "sqlmodel>=0.0.37",
    "pymongo>=4.8.0",
]
